[package]
name = "xyzpub"
version = "0.2.1"
edition = "2018"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
description = "Convert xpubs and xprvs to different versions."
readme = "README.md"
repository = "https://github.com/Groestlcoin/xyzpub"
license = "MIT"
keywords = ["groestlcoin", "xpub", "slip132"]
categories = ["cryptography::cryptocurrencies"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
groestlcoin = { git = "https://github.com/Groestlcoin/rust-groestlcoin", branch = "v0.27.0" }
